# nayantra

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example  tools.json
docker/: Dockerfile.agent  Dockerfile.mcp  Dockerfile.stub  docker-compose.yml  prometheus.yml  rmf_stub_server.py
docs/: README.md  architecture.md  getting_started.md  isaac_sim_setup.md  nav2_stack_plan.md  rviz_setup.md  zenoh_setup.md
nayantra/: config.py
nayantra/agent/: agent.py  api.py  api_v2.py  health.py  history.py  main.py  models.py  planner.py
nayantra/api/: dashboard.html  ws_monitor.py
nayantra/isaac_sim/: robot_spawner.py  sim_bridge.py
nayantra/mcp/: auth.py  server.py  tools.py
nayantra/rmf_bridge/: __init__.py  server.py
nayantra/rmf_client/: client.py  models.py
nayantra/ros2_adapter/: fleet_adapter.py
nayantra/zenoh_bridge/: bridge.py
runtime/: smoke_bridge.py
scripts/: drive_cli.py  generate_token.py  install_isaac_pip.sh  isaac_boot.py  isaac_demo.py  isaac_sim_server.py  run_isaac_workstation.sh  setup.ps1  setup.sh  start.ps1  start.sh  stop.ps1  stop.sh
slurm/: 00_recon.sh  apptainer_build_isaac.sh  enroot_import_isaac.sh  gpu02_bootstrap.sh  isaac_boot.py  isaac_carter_app.py  isaac_warehouse.slurm  isaac_warehouse_pip.slurm  isaac_warehouse_udocker.slurm  isaac_webrtc.slurm  pip_install_isaac.sh  probe_gpu02.sh  run_isaac_apptainer.sh  run_isaac_carter.sh  run_isaac_direct.sh  run_isaac_gpu02.sh  udocker_setup_isaac.sh  webrtc_relay.py
tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_config.py  test_fleet_adapter.py  test_health.py  test_history.py  test_isaac_sim.py  test_mcp_server.py  test_planner.py  test_rmf_client.py  test_rmf_models.py  test_ws_monitor.py
